--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,9 @@
 <form class="form-signin" method="post">
+  {{#each errorMessages}}
+    <div class="alert alert-danger">
+      {{this.msg}}
+    </div>
+  {{/each}}
   <h2 class="form-signin-heading text-center">New Account</h2>
   <br/>
 
