--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,9 +4,11 @@
 
   <input type="email" name="email" class="form-control" placeholder="Email" require="" autofocus="">
   <br/>
-  <input type="password" name="password" class="form-control" placeholder="Password" require="">
+  <input type="password" name="password" class="form-control" placeholder="Password" require="" >
   <br/>
-
   <button type="submit" class="btn btn-lg btn-primary btn-block">Sign In</button>
-
+  <br/>
+  <h4 class="text-center">Or</h4>
+  <br/>
+  <a href="/auth/facebook" class="btn btn-lg btn-success btn-block">Sign In with Facebook</a>
 </form>
