--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,5 +10,5 @@
   <br/>
   <h4 class="text-center">Or</h4>
   <br/>
-  <a href="/auth/facebook" class="btn btn-lg btn-success btn-block">Sign In with Facebook</a>
+  <a href="/auth/facebook" class="btn btn-facebook btn-lg btn-block">Sign In with Facebook</a>
 </form>
