--- a/views/register.hbs
+++ b/views/register.hbs
@@ -19,6 +19,6 @@
   <br/>
   <h4 class="text-center">Or</h4>
   <br/>
-  <a href="/auth/facebook" class="btn btn-lg btn-success btn-block">Sign Up with Facebook</a>
+  <a href="/auth/facebook" class="btn btn-facebook btn-lg btn-block">Sign Up with Facebook</a>
 
 </form>
