--- a/views/task.hbs
+++ b/views/task.hbs
@@ -1,1 +1,19 @@
-<h1>This is a new Task</h1>
+<div>
+  <div class="row">
+    <div class="col-md-8">
+      <textarea id="code-screen"></textarea>
+    </div>
+    <div class="col-md-4" id="chatbox">
+      <!-- CHAT BOX HERE -->
+    </div>
+  </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.30.0/codemirror.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.30.0/mode/javascript/javascript.min.js"></script>
+<script>
+  var editor = CodeMirror.fromTextArea(document.getElementById("code-screen"), {
+    lineNumbers: true,
+    theme: "monokai"
+  });
+</script>
