--- a/views/task.hbs
+++ b/views/task.hbs
@@ -5,6 +5,25 @@
     </div>
     <div class="col-md-4" id="chatbox">
       <div class="panel panel-primary">
+        <!-- VIDEO CALL -->
+        <div id="video-container">
+          <video autoplay id="second-video"></video>
+          <video autoplay id="my-video" muted="true"></video>
+          <div id="step2">
+            <p>Your ID:<span id="my-id">...</span></p>
+            <div class="form-inline">
+              <input type="text" class="form-control" placeholder="Call User ID ..." id="callto-id">
+              <a href="#" class="btn btn-sm btn-success" id="make-call">Call</a>
+            </div>
+          </div>
+          <div id="step3">
+            <p>Talk to <span id="second-id">...</span>
+            <a href="#" class="btn btn-sm btn-danger" id="end-call">End call</a>
+          </p>
+          </div>
+        </div>
+
+        <!-- CHAT ROOM -->
         <div class="panel-heading">
           CHAT ROOM
           <span class="pull-right" id="chatbox-username">
