--- a/views/task.hbs
+++ b/views/task.hbs
@@ -54,7 +54,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.30.0/mode/javascript/javascript.min.js"></script>
 <script src="/plugins/ot/ot.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="http://cdn.peerjs.com/0.3/peer.js"></script>
+<script src="https://rocky-depths-74216.herokuapp.com/peer/peer.js"></script>
 <script>
 
   var EditorClient = ot.EditorClient;
@@ -112,7 +112,15 @@
   // Compatibility shim - this is what displays the camera
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
     // PeerJS object - here is where it creates a new peer and passes the username and roomId to the peer.
-    var peer = new Peer(username + roomId, {key: ''});
+    var peer = new Peer(username + roomId, {
+      host: 'rocky-depths-74216.herokuapp.com',
+      path: '/peerjs',
+      port: 443,
+      secure: true,
+      key: 'code4startup',
+      debug: true
+    });
+    
     peer.on('open', function(){
       $('#my-id').text(peer.id);
     });
