updated peer server

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -54,7 +54,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.30.0/mode/javascript/javascript.min.js"></script>
 <script src="/plugins/ot/ot.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://rocky-depths-74216.herokuapp.com/peer/peer.js"></script>
+<script src="https://protected-fjord-78055.herokuapp.com/peer/peer.js"></script>
 <script>
 
   var EditorClient = ot.EditorClient;
@@ -113,14 +113,14 @@
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
     // PeerJS object - here is where it creates a new peer and passes the username and roomId to the peer.
     var peer = new Peer(username + roomId, {
-      host: 'rocky-depths-74216.herokuapp.com',
+      host: 'protected-fjord-78055.herokuapp.com',
       path: '/peerjs',
       port: 443,
       secure: true,
-      key: 'code4startup',
+      key: 'codeTogether',
       debug: true
     });
-    
+
     peer.on('open', function(){
       $('#my-id').text(peer.id);
     });
