updated peer server

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -117,7 +117,7 @@
       path: '/peerjs',
       port: 443,
       secure: true,
-      key: 'codeTogether',
+      key: 'code-Together',
       debug: true
     });
 
