--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,9 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+
+<div id="typed-strings">
+    <p class="lead">Welcome to {{title}}</p>
+ </div>
+ <span id="typed"></span>
 
 {{#if user}}
   <a href="/createTask" class="btn btn-primary">Create new task</a>
