add image for main page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,3 +71,20 @@ body {
   border-color: #2d467b;
   background-color: #2d467b;
 }
+
+.css-typing
+{
+    width: 30em;
+    white-space:nowrap;
+    overflow:hidden;
+    -webkit-animation: type 5s steps(50, end);
+    animation: type 5s steps(50, end);
+}
+
+@keyframes type{
+    from { width: 0; }
+}
+
+@-webkit-keyframes type{
+    from { width: 0; }
+}
