--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,15 @@
 <h1>{{title}}</h1>
 
 <div id="typed-strings">
-    <p class="lead">Welcome to {{title}}</p>
+    <p class="lead css-typing">Welcome to {{title}}</p>
  </div>
  <span id="typed"></span>
+
 
 {{#if user}}
   <a href="/createTask" class="btn btn-primary">Create new task</a>
 {{/if}}
+
+<div class="container">
+  <img src="images/main.png" alt="Code Together" class="img-responsive" style="width:704px;height:428px; margin:auto;">
+</div>
