--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,13 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  min-height: 2000px;
+  min-height: 750px;
   padding-top: 70px;
-  margin: 0 40px;
+  margin: 0;
+  margin-bottom: 60px;
 }
 
 .form-signin {
@@ -87,4 +93,16 @@ body {
 
 @-webkit-keyframes type{
     from { width: 0; }
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  border-color: #101010;
+  background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
+  background-repeat: repeat-x;
 }
