--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -59,6 +59,11 @@
     {{{body}}}
 
 
+    <footer class="footer">
+    <div class="container">
+      <span class="text-muted">Miriam Espinosa &hearts; WDI-23</span>
+    </div>
+  </footer>
 
   </body>
 </html>
