update peer server

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -134,7 +134,7 @@
       path: '/peerjs',
       port: 443,
       secure: true,
-      key: 'code-Together',
+      key: 'codetogether',
       debug: true
     });
 
