--- a/views/task.hbs
+++ b/views/task.hbs
@@ -1,7 +1,7 @@
 <div>
   <div class="row">
     <div class="col-md-8">
-      <textarea id="code-screen"></textarea>
+      <textarea id="code-screen">{{content}}</textarea>
     </div>
     <div class="col-md-4" id="chatbox">
       <div class="panel panel-primary">
@@ -67,10 +67,13 @@
     theme: "monokai"
   });
 
+  var code = $('#code-screen').val();
   var cmClient;
   //create new init function and passed the function to the socket.
   function init(str, revision, clients, serverAdapter) {
-    editor.setValue(str);
+    if (!code) {
+      editor.setValue(str);
+    }
     cmClient = window.cmClient = new EditorClient(
       revision, clients, serverAdapter, new CodeMirrorAdapter(editor) //got editor from var editor above.
     );
